--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.password=LAsmoonton1122@
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.thymeleaf.cache=false
 
+# Enable automatic restart
+spring.devtools.restart.enabled=true
